# backend

./: .dockerignore  .env  .env.common  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  common.env  docker-compose.yml  locustfile.py  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  gitmessage.txt  requirements.txt
.github/workflows/: build-docker-image.yml  release.yml
api/: main.py
aymurai/: alembic.ini  logging.py  settings.py  version.py
aymurai/api/: core.py  exceptions.py  main.py  stats.py  systemtray_server.py  utils.py
aymurai/api/startup/: database.py
aymurai/data_augmentation/: __init__.py  core.py  utils.py
aymurai/database/: env.py  schema.py  session.py  utils.py
aymurai/database/crud/: document.py  model.py  prediction.py
aymurai/database/meta/: datapublic.py  document.py  extra.py  model.py  paragraph.py  prediction.py
aymurai/database/versions/: 022260cf7574_database_creation.py  13f78d08e925_create_database.py  1d5e8cca3a9c_create_database.py  6a418ffd84da_create_database.py  86bdf2a39c7e_create_database.py  b09c785624d8_create_database.py  c371aff13e1e_create_database.py  d6c141e03875_create_database.py  fbbf0625af14_create_database.py
aymurai/datasets/: utils.py
aymurai/datasets/ar_juz_pcyf_10/: annotations.py  common.py  pdfs.py  public.py
aymurai/devtools/: __init__.py  paths.py
aymurai/devtools/magic/: export.py
aymurai/logger/: logger.py
aymurai/meta/: api_interfaces.py  entities.py  pipeline_interfaces.py  types.py  xml_document.py
aymurai/models/decision/: binregex.py  conv1d.py  tokenizer.py
aymurai/models/flair/: core.py  utils.py
aymurai/models/usem/: core.py
aymurai/pipeline/: __init__.py  config.py  pipeline.py  postprocess.py  preprocess.py  training.py
aymurai/text/: anonymization.py  extraction.py  normalize.py
aymurai/text/anonymization/: alignment.py  core.py  xml_docx.py
aymurai/text/tokenizers/: spanish.py
aymurai/transforms/anonymization_postprocess/: core.py
aymurai/transforms/datetime_formatter/: patterns.py
aymurai/transforms/entity_subcategories/: article.py  article_maps.py  regex.py  usem.py  utils.py
aymurai/transforms/misc/: annot2pred.py
aymurai/utils/: cache.py  download.py  entities.py  json_data.py  json_encoding.py  misc.py  pickle_data.py
aymurai/utils/alignment/: core.py  ia2.py
aymurai/utils/display/: colors.py  pandas.py  render.py
docker/api/: Dockerfile
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/api/: README.md
docs/data/: label-studio-config.xml
docs/data/en/: entities-table.md
docs/data/es/: entities-table.md
docs/database/: README.md
docs/pipeline/: README.md  decision-model-card.md  flair-model-card.md
hooks/: commit-msg-hook.sh  semantic_hook.py
notebooks/data-preparation/: 04-pdf-database.ipynb  10-public-preprocessing.ipynb  11-private-preprocessing.ipynb  20-validation-codes-analysis.ipynb
notebooks/data-preparation/annotations/: 00-subcategories-normalization.ipynb  01-export-docs.ipynb  02-annotations-to-aymurai.ipynb  03-label-studio-annotations-to-aymurai.ipynb  04-prepare-ner-dataset.ipynb  05-prepare-ner-dataset-without-decision.ipynb  06-pdf-database.ipynb
notebooks/dev/document-match/: 00-docs-files.ipynb
notebooks/dev/patterns/: 04-gender.ipynb
notebooks/dev/pipeline-unificado/: 00-datasets.ipynb  00-pipeline-public.ipynb  01-pipeline-private-pdfs.ipynb  02-pipeline-private-docs.ipynb  03-dummy-pipelines.ipynb
notebooks/dev/violence-quotes/: 01-quotes-extraction.ipynb  02-quotes-matching.ipynb  frases_agresion.autogen.csv  frases_agresion.csv
notebooks/experiments/anonimization/: alignment.ipynb
notebooks/experiments/anonymization/: .gitignore  00-document-matching.ipynb  01-alignment.ipynb  01-ia2-aligned-dataset.ipynb  02-prepare-dataset.ipynb  03-flair-anonymizer.ipynb  04-anonymize-docx.ipynb  04-lora-anonymizer.ipynb  alignment.ipynb  anonymization-ner-lora.ipynb  bio-ner-lora.ipynb  document-matching.ipynb
notebooks/experiments/data/: 00-data-parser.ipynb  01-data-analysis-public.ipynb  02-data-analysis-private.ipynb  10-data-info.ipynb
notebooks/experiments/data-augmentation/: 00-anonymizer-entities.ipynb  00-data-augmentation.ipynb  01-anonymizer-entities.ipynb  01-batch-generation.ipynb
notebooks/experiments/decision/: .gitignore  00-data-generation.ipynb  01-training-2class-conv1d-agnews.ipynb  01-training-2class-conv1d.ipynb  02-evaluate-2class-conv1d.ipynb  03-pipeline-build.ipynb  10-multilabel-tfhub.ipynb  11-multilabel-emb-lstm.ipynb  20-keras-binary-decision-emb-lstm.ipynb  21-keras-binary-decision-usem.ipynb  30-keras-multiclass-emb-lstm.ipynb  31-keras-multiclass-usem.ipynb  40-torch-multiclass-emb-lstm.ipynb  41-torch-multiclass-emb-conv1d.ipynb  411-build-pipeline.ipynb  411-torch-multiclass-emb-conv1d-agnews.ipynb  412-torch-multiclass-emb-conv1d.ipynb  413-torch-binary-emb-conv1d.ipynb  4130-torch-binary-emb-conv1d-eval.ipynb  4131-build-pipeline-bin-regex.ipynb  42-torch-binary-emb-conv1d.ipynb  43-torch-binary-emb-lstm.ipynb  README.md
notebooks/experiments/pdf-support/: 01-document-extract.ipynb  02-anonymize-document.ipynb  03-detr-layout-detection.ipynb  04-anonymize-pdf.ipynb  05-datapublic.ipynb
notebooks/experiments/reverse-engineering/: 10-document-analysis-dates.ipynb  11-document-analysis-frases-agresion.ipynb  12-document-ia2-ner.ipynb  13-document-frases-fuzzymatch.ipynb  datetime-matcher-test.ipynb
notebooks/experiments/subcategories/: 00-exploration.ipynb  00-persona-no-determinada.ipynb  02-firma.ipynb  (+3 more)
notebooks/pipeline/: 00-datasets.ipynb  01-pipeline.ipynb
resources/data-augmentation/: cars.json  localidades.csv  nationalities.list
resources/data_augmentation/: bank_codes.list
src/aymurai/: setup.py
test/api/: test_file.docx
tutorials/: GET_STARTED.md
tutorials/00-annotations/: 01-export-docs.ipynb  02-doc-visualization.ipynb  README.md
tutorials/01-pipeline/: 01-evaluation.ipynb  02-run-ner-from-huggingface.ipynb
(+214 files in other folders)
