[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aymurai"
requires-python = ">=3.10"
# version = "1.1.0"
dynamic = ["version"]
# dynamic = ["version", "dependencies"]
authors = [
    { name = "datagenero.org", email = "aymurai@datagenero.org" },
    { name = "collective.ai", email = "info@collectiveai.io" },
]
maintainers = [
    { name = "jedzill4", email = "r@collectiveai.io" },
    { name = "jansaldo", email = "juli@collectiveai.io" },

]
description = "The backend API and machine learning models of AymurAI."
readme = "README.md"
license = { file = "LICENSE.md" }
# homepage = "https://github.com/AymurAI/backend"
keywords = [
    "api",
    "deep-learning",
    "gender-equality",
    "justice",
    "document-analysis",
    "openjustice",
    "gender-data",
    "platform",
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Stable",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Intended Audience :: Lawyers",
    "Intended Audience :: ONGs",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here.
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "requests==2.32.3",
    "numpy<2.0.0",
    "more-itertools==10.5.0",
    "odfpy==1.4.1",
    "gdown==4.6.0",
    "joblib==1.4.2",
    "textract==1.6.5",
    # "spacy[transformers]==3.8.3",
    "spaczz==0.6.1",
    "datetime_matcher @ git+https://github.com/jedzill4/datetime_matcher",
    "scikit-learn==1.5.2",
    "jiwer==3.0.5",
    "datasets>=3.2.0",
    "python-magic==0.4.27",
    # "redis==5.0.8",
    "unidecode==1.3.8",
    "sentencepiece==0.2.0",
    # "flair @ git+https://github.com/flairNLP/flair@v0.13.1",
    "flair==0.14.0",
    "pytorch-lightning==1.8.3.post1",
    "torchtext==0.18.0",
    "tensorflow_text==2.18.1",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "python-multipart==0.0.20",
    "pydantic==2.10.4",
    "pydantic_settings==2.7.0",
    "httpx==0.28.1",
    "faker==18.11.2",
    "xmltodict==0.14.2",
    "cachetools==5.5.0",
    "diskcache==5.6.3",
    "mammoth==1.8.0",
    "scipy<1.14.1",
    "torch==2.5.1",
    "rich==13.9.4",
    "psutil==6.1.0",
    "sqlmodel==0.0.22",
    "alembic==1.13.3",
    "tenacity==9.0.0",
    "python-dotenv==1.0.1",
]

[project.urls]
Homepage = "https://www.aymurai.info/"
Repository = "https://github.com/aymurAI/backend"
Issues = "https://github.com/AymurAI/backend/issues"

# [project.optional-dependencies]
# gpu = [
#     "torch @ https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp310-cp310-linux_x86_64.whl",
#     "spacy[cuda113]==3.8.3",
# ]

[dependency-groups]
dev = [
    "tensorboard==2.18.0",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "plotly==5.24.1",
    "pre-commit==4.0.1",
    "nbstripout==0.8.0",
    "pip-search==0.0.12",
    "jupyter==1.1.1",
]
lint = ["ruff"]

[tool.setuptools.packages.find]
include = ["aymurai"]

[project.scripts]
aymurai-api = "aymurai.api.main:main"


[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.csv"]

[tool.setuptools_scm]
version_file = "aymurai/version.py"


[tool.uv]
python-preference = "system"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.isort]
profile = "black"
length_sort = true
combine_as_imports = true
force_sort_within_sections = true
